--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body class="loading">
+<body class="_loading">
   <div class="loader">
     <div class="spinner">
       <svg>
@@ -57,16 +57,18 @@
         <div class="banner-text w-75 text-white mt-5 text-shadow">
 
 
-          <h2>Need to scale your business? <small class="d-block mt-2">We are with you every step of the way. Talk to our experts today.</small></h2>
+          <h2>Need to scale your business? <small class="d-block mt-2">We are with you every step of the way. Talk to
+              our experts today.</small></h2>
 
 
-          <div class="my-4 subtitle">We develope not only software, but also creating great Values to your business through
-            <br/>
+          <div class="my-4 subtitle">We develope not only software, but also create great Values to your business
+            through
+            <br />
             digital
             technologies.</div>
 
-            <button class="btn btn-danger my-4 shadow d-xxl-none">Drop your requirement</button>
-            <button class="btn btn-danger btn-lg my-4 shadow d-none d-xxl-inline-block">Drop your requirement</button>
+          <button class="btn btn-danger my-4 shadow d-xxl-none">Drop your requirement</button>
+          <button class="btn btn-danger btn-lg my-4 shadow d-none d-xxl-inline-block">Drop your requirement</button>
         </div>
       </div>
     </div>
@@ -145,49 +147,206 @@
       </div>
     </nav>
 
+    <section class="bg-light">
+
+      <div class="container">
+        <div class="row">
+
+          <div class="col-6 col-md-7 align-self-center text-right">
+            <h3 class="mb-4">Mobile App Development</h3>
+            <p>The Mobile app development service provided by Dqube will prove to be very beneficial for your business.
+              Our extensive research and work have made us efficacious in this aspect</p>
+            <button class="btn btn-outline-secondary btn-sm mt-2">Learn more
+              <i class="fas fa-chevron-right ml-2"></i>
+            </button>
+          </div>
+
+          <div class="col-6 col-md-5">
+
+            <img class="img-fluid" src="/assets/image/mobileappdevelopement.gif" />
+
+          </div>
 
 
-    <div class="container">
-      Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
-      <br />
-    </div>
+        </div>
+
+      </div>
+    </section>
+
+
+
+    <section class="bg-white">
+
+      <div class="container">
+
+
+        <div class="row mb-4">
+          <div class="col-6 col-md-5">
+
+            <img class="img-fluid" src="/assets/image/websiteDesign.gif" />
+
+          </div>
+          <div class="col-6 col-md-7 align-self-center">
+            <h3 class="mb-4">Web Designing & Development</h3>
+            <p>We at Dqube, create your own website, not just a website but a user-friendly, responsive website.
+              Our focus is to create and maintain great looking websites which drive great profit for your business</p>
+
+            <button class="btn btn-outline-secondary btn-sm mt-2">Learn more
+              <i class="fas fa-chevron-right ml-2"></i>
+            </button>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+
+
+    <section class="bg-light">
+
+      <div class="container">
+
+
+        <div class="row">
+
+          <div class="col-6 col-md-7 align-self-center text-right">
+            <h3 class="mb-4">Enterprise Application Development</h3>
+            <p>Technology should be available to aid your organization irrespective of its size. At Dqube we believe
+              everyone should be able to reap the benefits of technological advancements. Let an ERP & CRM aid you
+              double
+              growth rate.</p>
+            <button class="btn btn-outline-secondary btn-sm mt-2">Learn more
+              <i class="fas fa-chevron-right ml-2"></i>
+            </button>
+          </div>
+          <div class="col-6 col-md-5">
+
+            <img class="img-fluid" src="/assets/image/EnterpriseApp.gif" />
+
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <section class="bg-white">
+
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-md-5">
+
+            <img class="img-fluid" src="/assets/image/productDev.gif" />
+
+          </div>
+          <div class="col-6 col-md-7 align-self-center text-left">
+            <h3 class="mb-4">Product Engineering</h3>
+            <p>We help Small & Medium Businesses to turn their ideas into products. We act as their technology
+              partner end-to-end: from idea validation & design to prototyping to market launch and multiplying up
+              their revenue.</p>
+            <button class="btn btn-outline-secondary btn-sm mt-2">Learn more
+              <i class="fas fa-chevron-right ml-2"></i>
+            </button>
+          </div>
+
+
+
+
+        </div>
+
+      </div>
+
+
+    </section>
+
+
+    <section class="bg-dark-transparent">
+
+      <div class="container">
+
+        <div class="row row-eq-height">
+
+
+          <div class="col-12 col-md-4">
+            <h3 class="mt-5 mb-4 text-shadow text-white">FEATURED PRODUCTS</h3>
+
+            <div class="list-group shadow-sm">
+              <a href="#" class="list-group-item list-group-item-action border-0 bg-light">
+                <div class="d-flex w-100 justify-content-between">
+                  <strong class="mb-1">AurumLogs</strong>
+                  <small class="text-primary">Website</small>
+                </div>
+
+                <p class="mb-1"><small>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus
+                    varius
+                    blandit.</small></p>
+              </a>
+
+              <a href="#" class="list-group-item list-group-item-action border-0 bg-light">
+                <div class="d-flex w-100 justify-content-between">
+                  <strong class="mb-1">Threads</strong>
+                  <small class="text-primary">Mobile App</small>
+                </div>
+                <p class="mb-1"><small>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus
+                    varius
+                    blandit.</small></p>
+              </a>
+
+              <a href="#" class="list-group-item list-group-item-action border-0 bg-light">
+                <div class="d-flex w-100 justify-content-between">
+                  <strong class="mb-1">Your Customer</strong>
+                  <small class="text-primary">CRM</small>
+                </div>
+                <p class="mb-1"><small>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus
+                    varius
+                    blandit.</small></p>
+              </a>
+
+            </div>
+          </div>
+
+          <div class="col-12 col-md-8 align-self-center text-center">
+
+            <div class="row row-metric-circle">
+              <div class="col">
+                <div class="metric-circle">
+                  15
+                  <i class="fas fa-thumbs-up"></i>
+                </div>
+                <label>Best Clients</label>
+              </div>
+              <div class="col">
+                <div class="metric-circle">
+                  20
+                  <i class="fas fa-smile"></i>
+                </div>
+                <label>Happy Customers</label>
+
+              </div>
+              <div class="col">
+                <div class="metric-circle">
+                  30
+                  <i class="fas fa-tasks"></i>
+                </div>
+
+                <label>Projects Done</label>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
+
+    </section>
+
+
   </main>
 
+</body>
 
-  <div class="" </body> </html>
+</html>
